--- a/WebInterface/index.html
+++ b/WebInterface/index.html
@@ -2,12 +2,31 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Index</title>
+    <title>AnonyJob - Hire Smarter to Work Better</title>
     <link rel = "stylesheet" href="css/bootstrap.css">
     <link rel = "stylesheet" href="css/bootstrap-theme.css">
+    <link rel = "stylesheet" href="css/style.css">
+    <link rel="icon" type="image/jpg"
+          href="images/favicon.jpg" />
     <script href="js/bootstrap.js" type="application/javascript"></script>
 </head>
 <body>
+<section id="home" class="pfblock-image screen-height">
+    <div class="home-overlay"></div>
+    <div class="intro">
+        <h1>AnonyJob</h1>
+        <div class="start">Hire Smarter | Work Better</div>
+    </div>
+
+    <a href="#projects">
+        <div class="scroll-down">
+            <span class="glyphicon glyphicon-menu-down" aria-hidden="true"></span>
+        </div>
+    </a>
+
+</section>
+
+<header class = "header">
 <nav class="navbar navbar-default">
     <div class="container-fluid">
         <!-- Brand and toggle get grouped for better mobile display -->
@@ -30,6 +49,9 @@
         </div><!-- /.navbar-collapse -->
     </div><!-- /.container-fluid -->
 </nav>
+</header>
+
+
 
 </body>
 </html>
