--- a/WebInterface/AddAJobConfirmInterface.html
+++ b/WebInterface/AddAJobConfirmInterface.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Add a Job</title>
+    <title>Confirm a Job</title>
     <link rel = "stylesheet" href="css/bootstrap.css">
     <link rel = "stylesheet" href="css/bootstrap-theme.css">
     <script href="js/bootstrap.js" type="application/javascript"></script>
@@ -30,25 +30,37 @@
         </div><!-- /.navbar-collapse -->
     </div><!-- /.container-fluid -->
 </nav>
-<center><h1>Posted Jobs</h1></center><br>
+<center><h1>Post New Job</h1></center><br>
 <table class="table table-hover"> 
     <div class="row">
       <div class="col-md-3"></div>
-      <div class="col-md-5"><h3>Business Analyst</h3></div>
-      <div class="col-md-4"><a class="btn btn-warning" href="#" role="button">Edit</a></div>
+      <div class="col-md-2"><h3>Job Title</h3></div>
+      <div class="col-md-5"><input class="form-control" id="disabledInputJobTitle" type="text" placeholder="Astronaut" disabled></div>
+      <div class="col-md-2"></div>
     </div>
     <div class="row">
       <div class="col-md-3"></div>
-      <div class="col-md-5"><h3>Developer</h3></div>
-      <div class="col-md-4"><a class="btn btn-warning" href="#" role="button">Edit</a></div>
+      <div class="col-md-2"><h3>Job Description</h3></div>
+      <div class="col-md-5"><input class="form-control" id="disabledInputJobDescription" type="text" placeholder="Go into Space!!" disabled></div>
+      <div class="col-md-2"></div>
     </div>
     <div class="row">
       <div class="col-md-3"></div>
-      <div class="col-md-5"><h3>Graphic Artist</h3></div>
-      <div class="col-md-4"><a class="btn btn-warning" href="#" role="button">Edit</a></div>
+      <div class="col-md-2"><h3>Location</h3></div>
+      <div class="col-md-5"><input class="form-control" id="disabledInputLocation" type="text" placeholder="Space!!" disabled></div>
+      <div class="col-md-2"></div>
     </div>
     <div class="row">
-      <div class="col-md-12"><center><a class="btn btn-primary btn-lg" href="AddAJobEditInterface.html" role="button">Add New</a></center></div>
+      <div class="col-md-3"></div>
+      <div class="col-md-2"><h3>Salary</h3></div>
+      <div class="col-md-5"><input class="form-control" id="disabledInputJobSalary" type="text" placeholder="Not nearly enough" disabled></div>
+      <div class="col-md-2"></div>
+    </div>
+    <div class="row">
+    <div class="col-md-3"></div>
+      <div class="col-md-2"><a class="btn btn-warning btn-lg" href="AddAJobEditInterface.html" role="button">Edit</a></div>
+      <div class="col-md-4"><center><a class="btn btn-primary btn-lg" href="#" role="button">Confirm</a></center></div>
+      <div class="col-md-3"></div>
     </div>
 </table>
 </body>
