Added all pages for web

--- a/WebInterface/AddAJobConfirmInterface.html
+++ b/WebInterface/AddAJobConfirmInterface.html
@@ -30,7 +30,7 @@
         </div><!-- /.navbar-collapse -->
     </div><!-- /.container-fluid -->
 </nav>
-<center><h1>Post New Job</h1></center><br>
+<center><h1>Post Job</h1></center><br>
 <table class="table table-hover"> 
     <div class="row">
       <div class="col-md-3"></div>
@@ -59,7 +59,7 @@
     <div class="row">
     <div class="col-md-3"></div>
       <div class="col-md-2"><a class="btn btn-warning btn-lg" href="AddAJobEditInterface.html" role="button">Edit</a></div>
-      <div class="col-md-4"><center><a class="btn btn-primary btn-lg" href="#" role="button">Confirm</a></center></div>
+      <div class="col-md-4"><center><a class="btn btn-primary btn-lg" href="AddAJobNewJob.html" role="button">Confirm</a></center></div>
       <div class="col-md-3"></div>
     </div>
 </table>
