--- a/WebInterface/AddAJobNewJob.html
+++ b/WebInterface/AddAJobNewJob.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Add a Job</title>
+    <title>Add a Job Updated</title>
     <link rel = "stylesheet" href="css/bootstrap.css">
     <link rel = "stylesheet" href="css/bootstrap-theme.css">
     <script href="js/bootstrap.js" type="application/javascript"></script>
@@ -45,6 +45,11 @@
     <div class="row">
       <div class="col-md-3"></div>
       <div class="col-md-5"><h3>Graphic Artist</h3></div>
+      <div class="col-md-4"><a class="btn btn-warning" href="AddAJobEditExistingInterface.html" role="button">Edit</a></div>
+    </div>
+    <div class="row">
+      <div class="col-md-3"></div>
+      <div class="col-md-5"><h3>Astronaut</h3></div>
       <div class="col-md-4"><a class="btn btn-warning" href="AddAJobEditExistingInterface.html" role="button">Edit</a></div>
     </div>
     <div class="row">
