--- a/WebInterface/index.html
+++ b/WebInterface/index.html
@@ -25,7 +25,7 @@
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
             <ul class="nav navbar-nav">
                 <li><a href="apply/landing.html">Apply for a Job</a></li>
-                <li><a href="post/landing.html">Post a Job</a></li>
+                <li><a href="AddAJob.html">Post a Job</a></li>
             </ul>
         </div><!-- /.navbar-collapse -->
     </div><!-- /.container-fluid -->
