--- a/WebInterface/apply/landing.html
+++ b/WebInterface/apply/landing.html
@@ -5,9 +5,51 @@
     <title>Apply for a Job</title>
     <link rel = "stylesheet" href="../css/bootstrap.css">
     <link rel = "stylesheet" href="../css/bootstrap-theme.css">
+    <link rel = "stylesheet" href="../js/jquery-ui.css">
     <script href="../js/bootstrap.js" type="application/javascript"></script>
+    <script src="../js/jquery-1.12.3.js"></script>
+    <script src="../js/jquery-ui.js"></script>
+    <script src="../js/search.js"></script>
+    <script>
+        $(function() {
+            var availableTags = [
+                "ActionScript",
+                "AppleScript",
+                "Asp",
+                "BASIC",
+                "C",
+                "C++",
+                "Clojure",
+                "COBOL",
+                "ColdFusion",
+                "Erlang",
+                "Fortran",
+                "Groovy",
+                "Haskell",
+                "Java",
+                "JavaScript",
+                "Lisp",
+                "Perl",
+                "PHP",
+                "Python",
+                "Ruby",
+                "Scala",
+                "Scheme"
+            ];
+            $( "#search" ).autocomplete({
+                source: availableTags
+            });
+            $("#form").submit(function(ev){
+                event.preventDefault();
+                console.log(ev);
+                SearchJob($("#search").val(),$("#where").val());
+            })
+        });
+    </script>
 </head>
+
 <body>
+<div class = wrapper>
 <nav class="navbar navbar-default">
     <div class="container-fluid">
         <!-- Brand and toggle get grouped for better mobile display -->
@@ -31,9 +73,45 @@
     </div><!-- /.container-fluid -->
 </nav>
 
-<p>
-Apply for a Job Here!!!
-</p>
+<div class = "container">
+<div class = "row">
+<div class="col-md-4 col-md-offset-4">
+    <h1 class="text-center">
+        Find a Job
+    </h1>
+</div>
+</div>
+    <div class = "row">
+    <form class="form-inline col-md-offset-4" id="form">
+        <div class="form-group">
+            <label for="search">Find</label>
+            <input type="text" class="form-control" id="search" placeholder="Job Details">
+        </div>
+
+        <div class="form-group">
+            <label for="Where">In:</label>
+            <input type="text" class="form-control" id="where" placeholder="Location">
+        </div>
+        <button class="btn btn-default" id="submit" type="submit">Search</button>
+    </form>
+    </div>
+    <div class = "container" id="results" style="margin-top: 30px;">
+    </div>
+</div>
+<div class="push"></div>
+</div>
+<footer class="footer bg-info">
+    <div class="container text-muted text-center">
+        <ul class="list-inline text-muted">
+            <li><a href="https://github.com/csteegz/HiringBias">GitHub</a></li>
+            <li><a href="http://cmsc434-s16.wikispaces.com/TA05+Interactive+Prototype+v1">Asignment Link</a></li>
+            <li><a href="../about/">About</a></li>
+        </ul>
+        <p>
+            TA-05 By Colin Versteeg, Sam Price, Jesse Averbukh and TJ Pickeral
+        </p>
+    </div>
+</footer>
 
 </body>
 </html>
