--- a/WebInterface/apply/landing.html
+++ b/WebInterface/apply/landing.html
@@ -10,6 +10,8 @@
     <script src="../js/jquery-1.12.3.js"></script>
     <script src="../js/jquery-ui.js"></script>
     <script src="../js/search.js"></script>
+    <link rel="icon" type="image/jpg"
+          href="../images/favicon.jpg" />
     <script>
         $(function() {
             var availableTags = [
