--- a/WebInterface/apply/landing.html
+++ b/WebInterface/apply/landing.html
@@ -6,6 +6,7 @@
     <link rel = "stylesheet" href="../css/bootstrap.css">
     <link rel = "stylesheet" href="../css/bootstrap-theme.css">
     <link rel = "stylesheet" href="../js/jquery-ui.css">
+    <link href="../css/bootstrap-tag-cloud.css" rel="stylesheet">
     <script href="../js/bootstrap.js" type="application/javascript"></script>
     <script src="../js/jquery-1.12.3.js"></script>
     <script src="../js/jquery-ui.js"></script>
@@ -75,7 +76,7 @@
     </div><!-- /.container-fluid -->
 </nav>
 
-<div class = "container">
+<div class = "container" id="main">
 <div class = "row">
 <div class="col-md-4 col-md-offset-4">
     <h1 class="text-center">
@@ -114,6 +115,6 @@
         </p>
     </div>
 </footer>
-
+<script language="JavaScript" src="../js/bootstrap-tag-cloud.js"></script>
 </body>
 </html>
