--- a/WebInterface/apply/landing.html
+++ b/WebInterface/apply/landing.html
@@ -7,8 +7,8 @@
     <link rel = "stylesheet" href="../css/bootstrap-theme.css">
     <link rel = "stylesheet" href="../js/jquery-ui.css">
     <link href="../css/bootstrap-tag-cloud.css" rel="stylesheet">
-    <script href="../js/bootstrap.js" type="application/javascript"></script>
     <script src="../js/jquery-1.12.3.js"></script>
+    <script src="../js/bootstrap.js" type="application/javascript"></script>
     <script src="../js/jquery-ui.js"></script>
     <script src="../js/search.js"></script>
     <link rel="icon" type="image/jpg"
@@ -115,6 +115,53 @@
         </p>
     </div>
 </footer>
+<div class="modal fade" id="applyModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+    <div class="modal-dialog" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                <h4 class="modal-title" id="myModalLabel">Apply for <div id="title"></div></h4>
+            </div>
+            <div class="modal-body">
+                <form class="form-horizontal">
+                    <div class="form-group">
+                        <label for="resSelect" class="col-sm-2 control-label">Resume</label>
+                        <div class="col-sm-5">
+                            <select class="form-control" id="resSelect">
+                            <option> Resume 1
+                            </option>
+                                <option>
+                                    Resume 2
+                                </option>
+                                <option>
+                                    Resume 3
+                                </option>
+                            </select>
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <label for="CLSelect" class="col-sm-2 control-label">Cover Letter</label>
+                        <div class="col-sm-5">
+                            <select class="form-control" id="CLSelect">
+                                <option> Letter 1
+                                </option>
+                                <option>
+                                    Letter 2
+                                </option>
+                                <option>
+                                    Letter 3
+                                </option>
+                            </select>                        </div>
+                    </div>
+                </form>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                <a href="submit.html" class="btn btn-primary">Apply!</a>
+            </div>
+        </div>
+    </div>
+</div>
 <script language="JavaScript" src="../js/bootstrap-tag-cloud.js"></script>
 </body>
 </html>
