About page written

--- a/WebInterface/apply/submit.html
+++ b/WebInterface/apply/submit.html
@@ -92,7 +92,7 @@
         <ul class="list-inline text-muted">
             <li><a href="https://github.com/csteegz/HiringBias">GitHub</a></li>
             <li><a href="http://cmsc434-s16.wikispaces.com/TA05+Interactive+Prototype+v1">Asignment Link</a></li>
-            <li><a href="../about/">About</a></li>
+            <li><a href="../about/index.html">About</a></li>
         </ul>
         <p>
             TA-05 By Colin Versteeg, Sam Price, Jesse Averbukh and TJ Pickeral
