--- a/WebInterface/index.html
+++ b/WebInterface/index.html
@@ -10,21 +10,6 @@
     <script href="js/bootstrap.js" type="application/javascript"></script>
 </head>
 <body>
-<section id="home" class="pfblock-image screen-height">
-    <div class="home-overlay"></div>
-    <div class="intro">
-        <h1>AnonyJob</h1>
-        <div class="start">Hire Smarter | Work Better</div>
-    </div>
-
-    <a href="#projects">
-        <div class="scroll-down">
-            <span class="glyphicon glyphicon-menu-down" aria-hidden="true"></span>
-        </div>
-    </a>
-
-</section>
-
 <header class = "header">
 <nav class="navbar navbar-default">
     <div class="container-fluid">
@@ -49,7 +34,24 @@
     </div><!-- /.container-fluid -->
 </nav>
 </header>
-
+    <div class="wrapper">
+    <div class = "container" id="main">
+        <h1 class="text-center">Hire Smarter | Work Better</h1>
+    </div>
+    <div class="push"></div>
+    </div>
+    <footer class="footer bg-info">
+        <div class="container text-muted text-center">
+            <ul class="list-inline text-muted">
+                <li><a href="https://github.com/csteegz/HiringBias">GitHub</a></li>
+                <li><a href="http://cmsc434-s16.wikispaces.com/TA05+Interactive+Prototype+v1">Asignment Link</a></li>
+                <li><a href="about/index.html">About</a></li>
+            </ul>
+            <p>
+                TA-05 By Colin Versteeg, Sam Price, Jesse Averbukh and TJ Pickeral
+            </p>
+        </div>
+    </footer>
 
 
 </body>
