Updated add a job interface to reflect user testing suggestions

--- a/WebInterface/AddAJobConfirmInterface.html
+++ b/WebInterface/AddAJobConfirmInterface.html
@@ -58,7 +58,7 @@
     </div>
     <div class="row">
     <div class="col-md-3"></div>
-      <div class="col-md-2"><a class="btn btn-warning btn-lg" href="AddAJobEditInterface.html" role="button">Edit</a></div>
+      <div class="col-md-2"><a class="btn btn-danger btn-lg" href="AddAJobEditInterface.html" role="button">Edit</a></div>
       <div class="col-md-4"><center><a class="btn btn-primary btn-lg" href="AddAJobNewJob.html" role="button">Confirm</a></center></div>
       <div class="col-md-3"></div>
     </div>
