--- a/WebInterface/AddAJobNewJob.html
+++ b/WebInterface/AddAJobNewJob.html
@@ -34,23 +34,31 @@
 <table class="table table-hover"> 
     <div class="row">
       <div class="col-md-3"></div>
-      <div class="col-md-5"><h3>Business Analyst</h3></div>
-      <div class="col-md-4"><a class="btn btn-warning" href="AddAJobEditExistingInterface.html" role="button">Edit</a></div>
+      <div class="col-md-4"><h3>Business Analyst</h3></div>
+      <div class="col-md-1" style = "padding-top:15px"><a class="btn btn-default" href="AddAJobEditExistingInterface.html" role="button">Edit</a></div>
+      <div class="col-md-1" style = "padding-top:15px"><a class="btn btn-danger" href="AddAJobEditExistingInterface.html" role="button">Delete</a></div>
+      <div class="col-md-3"></div>
     </div>
     <div class="row">
       <div class="col-md-3"></div>
-      <div class="col-md-5"><h3>Developer</h3></div>
-      <div class="col-md-4"><a class="btn btn-warning" href="AddAJobEditExistingInterface.html" role="button">Edit</a></div>
+      <div class="col-md-4"><h3>Developer</h3></div>
+      <div class="col-md-1" style = "padding-top:15px"><a class="btn btn-default" href="AddAJobEditExistingInterface.html" role="button">Edit</a></div>
+      <div class="col-md-1" style = "padding-top:15px"><a class="btn btn-danger" href="AddAJobEditExistingInterface.html" role="button">Delete</a></div>
+      <div class="col-md-3"></div>
     </div>
     <div class="row">
       <div class="col-md-3"></div>
-      <div class="col-md-5"><h3>Graphic Artist</h3></div>
-      <div class="col-md-4"><a class="btn btn-warning" href="AddAJobEditExistingInterface.html" role="button">Edit</a></div>
+      <div class="col-md-4"><h3>Graphic Artist</h3></div>
+      <div class="col-md-1" style = "padding-top:15px"><a class="btn btn-default" href="AddAJobEditExistingInterface.html" role="button">Edit</a></div>
+      <div class="col-md-1" style = "padding-top:15px"><a class="btn btn-danger" href="AddAJobEditExistingInterface.html" role="button">Delete</a></div>
+      <div class="col-md-3"></div>
     </div>
     <div class="row">
       <div class="col-md-3"></div>
-      <div class="col-md-5"><h3>Astronaut</h3></div>
-      <div class="col-md-4"><a class="btn btn-warning" href="AddAJobEditExistingInterface.html" role="button">Edit</a></div>
+      <div class="col-md-4"><h3>Astronaut</h3></div>
+      <div class="col-md-1" style = "padding-top:15px"><a class="btn btn-default" href="AddAJobEditExistingInterface.html" role="button">Edit</a></div>
+      <div class="col-md-1" style = "padding-top:15px"><a class="btn btn-danger" href="AddAJob.html" role="button">Delete</a></div>
+      <div class="col-md-3"></div>
     </div>
     <div class="row">
       <div class="col-md-12"><center><a class="btn btn-primary btn-lg" href="AddAJobEditInterface.html" role="button">Add New</a></center></div>
