Continued updating V1 tasks

--- a/WebInterface/AddAJobConfirmInterface.html
+++ b/WebInterface/AddAJobConfirmInterface.html
@@ -35,25 +35,25 @@
     <div class="row">
       <div class="col-md-3"></div>
       <div class="col-md-2"><h3>Job Title</h3></div>
-      <div class="col-md-5"><input class="form-control" id="disabledInputJobTitle" type="text" placeholder="Astronaut" disabled></div>
+      <div class="col-md-5" style = "padding-top:15px"><input class="form-control" id="disabledInputJobTitle" type="text" placeholder="Astronaut" disabled></div>
       <div class="col-md-2"></div>
     </div>
     <div class="row">
       <div class="col-md-3"></div>
       <div class="col-md-2"><h3>Job Description</h3></div>
-      <div class="col-md-5"><input class="form-control" id="disabledInputJobDescription" type="text" placeholder="Go into Space!!" disabled></div>
+      <div class="col-md-5" style = "padding-top:15px"><input class="form-control" id="disabledInputJobDescription" type="text" placeholder="Go into Space!!" disabled></div>
       <div class="col-md-2"></div>
     </div>
     <div class="row">
       <div class="col-md-3"></div>
       <div class="col-md-2"><h3>Location</h3></div>
-      <div class="col-md-5"><input class="form-control" id="disabledInputLocation" type="text" placeholder="Space!!" disabled></div>
+      <div class="col-md-5" style = "padding-top:15px"><input class="form-control" id="disabledInputLocation" type="text" placeholder="Space!!" disabled></div>
       <div class="col-md-2"></div>
     </div>
     <div class="row">
       <div class="col-md-3"></div>
       <div class="col-md-2"><h3>Salary</h3></div>
-      <div class="col-md-5"><input class="form-control" id="disabledInputJobSalary" type="text" placeholder="Not nearly enough" disabled></div>
+      <div class="col-md-5" style = "padding-top:15px"><input class="form-control" id="disabledInputJobSalary" type="text" placeholder="Not nearly enough" disabled></div>
       <div class="col-md-2"></div>
     </div>
     <div class="row">
