--- a/WebInterface/AddAJobEditInterface.html
+++ b/WebInterface/AddAJobEditInterface.html
@@ -35,25 +35,25 @@
     <div class="row">
       <div class="col-md-3"></div>
       <div class="col-md-2"><h3>Job Title</h3></div>
-      <div class="col-md-5"><input type="text" class="form-control" placeholder="Text input"></div>
+      <div class="col-md-5" style = "padding-top:15px"><input type="text" class="form-control" placeholder="Text input"></div>
       <div class="col-md-2"></div>
     </div>
     <div class="row">
       <div class="col-md-3"></div>
       <div class="col-md-2"><h3>Job Description</h3></div>
-      <div class="col-md-5"><input type="text" class="form-control" placeholder="Text input"></div>
+      <div class="col-md-5" style = "padding-top:15px"><input type="text" class="form-control" placeholder="Text input"></div>
       <div class="col-md-2"></div>
     </div>
     <div class="row">
       <div class="col-md-3"></div>
       <div class="col-md-2"><h3>Location</h3></div>
-      <div class="col-md-5"><input type="text" class="form-control" placeholder="Text input"></div>
+      <div class="col-md-5" style = "padding-top:15px"><input type="text" class="form-control" placeholder="Text input"></div>
       <div class="col-md-2"></div>
     </div>
     <div class="row">
       <div class="col-md-3"></div>
       <div class="col-md-2"><h3>Salary</h3></div>
-      <div class="col-md-5"><input type="text" class="form-control" placeholder="Text input"></div>
+      <div class="col-md-5" style = "padding-top:15px"><input type="text" class="form-control" placeholder="Text input"></div>
       <div class="col-md-2"></div>
     </div>
     <div class="row">
