--- a/WebInterface/about/index.html
+++ b/WebInterface/about/index.html
@@ -71,6 +71,7 @@
                 <ul class="nav navbar-nav">
                     <li class="active"><a href="../apply/landing.html">Apply for a Job</a></li>
                     <li><a href="../post/landing.html">Post a Job</a></li>
+                    <li><a href="../resume/landing.html">Add a Resume</a></li>
                 </ul>
             </div><!-- /.navbar-collapse -->
         </div><!-- /.container-fluid -->
