--- a/WebInterface/resume/landing.html
+++ b/WebInterface/resume/landing.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Apply for a Job</title>
+    <title>Add a Resume</title>
     <link rel = "stylesheet" href="../css/bootstrap.css">
     <link rel = "stylesheet" href="../css/bootstrap-theme.css">
     <link rel = "stylesheet" href="../js/jquery-ui.css">
@@ -69,9 +69,9 @@
         <!-- Collect the nav links, forms, and other content for toggling -->
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
             <ul class="nav navbar-nav">
-                <li class="active"><a href="../apply/landing.html">Apply for a Job</a></li>
+                <li><a href="../apply/landing.html">Apply for a Job</a></li>
                 <li><a href="../post/landing.html">Post a Job</a></li>
-                <li><a href="../resume/landing.html">Add a Resume</a></li>
+                <li  class="active"><a href="../resume/landing.html">Add a Resume</a></li>
             </ul>
         </div><!-- /.navbar-collapse -->
     </div><!-- /.container-fluid -->
@@ -81,26 +81,40 @@
 <div class = "row">
 <div class="col-md-4 col-md-offset-4">
     <h1 class="text-center">
-        Find a Job
+        Add a Resume
     </h1>
 </div>
 </div>
-    <div class = "row">
-    <form class="form-inline col-md-offset-4" id="form">
+    <form class = "col-md-offset-1 col-md-4" action = "http://localhost/WebInterface/upload" method="post">
+        <h2>Add A Resume from File</h2>
         <div class="form-group">
-            <label for="search">Find</label>
-            <input type="text" class="form-control" id="search" placeholder="Job Details">
+            <label for="exampleInputFile">Add a Resume</label>
+            <input type="file" id="exampleInputFile" name="name">
         </div>
-
-        <div class="form-group">
-            <label for="Where">In:</label>
-            <input type="text" class="form-control" id="where" placeholder="Location">
-        </div>
-        <button class="btn btn-default" id="submit" type="submit">Search</button>
+        <button type="submit" class="btn btn-default">Submit</button>
     </form>
+    <div class = "col-md-1">
+        <h2>
+            OR
+        </h2>
     </div>
-    <div class = "container" id="results" style="margin-top: 30px;">
-    </div>
+    <form class = "col-md-4" action = "http://localhost/WebInterface/form" method="post">
+        <h2>Use the Resume Builder</h2>
+        <p class = "help-block">Use <a href = https://github.com/adam-p/markdown-here/wiki/Markdown-Cheatsheet>Markdown</a> to Format</p>
+        <div class="form-group">
+            <label for="resName">Resume Name</label>
+            <input type="text" class="form-control" id="resName" placeholder="Resume Name" name="name">
+        </div>
+        <div class="form-group">
+            <label for="education">Education</label>
+            <textarea class="form-control" rows = "3" id="education"></textarea>
+        </div>
+        <div class="form-group">
+            <label for="Experience">Education</label>
+            <textarea class="form-control" rows = "3" id="Experience"></textarea>
+        </div>
+        <button type="submit" class="btn btn-default">Submit</button>
+    </form>
 </div>
 <div class="push"></div>
 </div>
