--- a/WebInterface/resume/done.html
+++ b/WebInterface/resume/done.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Add a Resume</title>
+    <title>Addded Resume</title>
     <link rel = "stylesheet" href="../css/bootstrap.css">
     <link rel = "stylesheet" href="../css/bootstrap-theme.css">
     <link rel = "stylesheet" href="../js/jquery-ui.css">
@@ -78,43 +78,7 @@
 </nav>
 
 <div class = "container" id="main">
-<div class = "row">
-<div class="col-md-4 col-md-offset-4">
-    <h1 class="text-center">
-        Add a Resume
-    </h1>
-</div>
-</div>
-    <form class = "col-md-offset-1 col-md-4" action = "done.html" method="get">
-        <h2>Add A Resume from File</h2>
-        <div class="form-group">
-            <label for="exampleInputFile">Add a Resume</label>
-            <input type="file" id="exampleInputFile" name="name">
-        </div>
-        <button type="submit" class="btn btn-default">Submit</button>
-    </form>
-    <div class = "col-md-1">
-        <h2>
-            OR
-        </h2>
-    </div>
-    <form class = "col-md-4" action = "done.html" method="get">
-        <h2>Use the Resume Builder</h2>
-        <p class = "help-block">Use <a href = https://github.com/adam-p/markdown-here/wiki/Markdown-Cheatsheet>Markdown</a> to Format</p>
-        <div class="form-group">
-            <label for="resName">Resume Name</label>
-            <input type="text" class="form-control" id="resName" placeholder="Resume Name" name="name">
-        </div>
-        <div class="form-group">
-            <label for="education">Education</label>
-            <textarea class="form-control" rows = "3" id="education"></textarea>
-        </div>
-        <div class="form-group">
-            <label for="Experience">Education</label>
-            <textarea class="form-control" rows = "3" id="Experience"></textarea>
-        </div>
-        <button type="submit" class="btn btn-default">Submit</button>
-    </form>
+Created resume!
 </div>
 <div class="push"></div>
 </div>
