--- a/WebInterface/index.html
+++ b/WebInterface/index.html
@@ -28,7 +28,9 @@
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
             <ul class="nav navbar-nav">
                 <li><a href="apply/landing.html">Apply for a Job</a></li>
+                <li><a href="resume/landing.html">Add A Resume</a></li>
                 <li><a href="AddAJob.html">Post a Job</a></li>
+                <li><a href="ViewApplicants/ViewApplicants.html">View Applicants</a></li>
             </ul>
         </div><!-- /.navbar-collapse -->
     </div><!-- /.container-fluid -->
@@ -48,7 +50,7 @@
                 <li><a href="about/index.html">About</a></li>
             </ul>
             <p>
-                TA-05 By Colin Versteeg, Sam Price, Jesse Averbukh and TJ Pickeral
+                TA-06 By Colin Versteeg, Sam Price, Jesse Averbukh and TJ Pickeral
             </p>
         </div>
     </footer>
