--- a/WebInterface/ViewApplicants/ViewApplicantsSplash.html
+++ b/WebInterface/ViewApplicants/ViewApplicantsSplash.html
@@ -27,14 +27,16 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="index.html">AnonyJob</a>
+            <a class="navbar-brand" href="../index.html">AnonyJob</a>
         </div>
 
         <!-- Collect the nav links, forms, and other content for toggling -->
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
             <ul class="nav navbar-nav">
-                <li><a href="apply/landing.html">Apply for a Job</a></li>
-                <li><a href="post/landing.html">Post a Job</a></li>
+                <li><a href="../apply/landing.html">Apply for a Job</a></li>
+                <li  ><a href="../resume/landing.html">Add a Resume</a></li>
+                <li><a href="../AddAJob.html">Post a Job</a></li>
+                <li class = "active"><a href="../ViewApplicants/ViewApplicants.html">View Applicants</a></li>
             </ul>
         </div><!-- /.navbar-collapse -->
     </div><!-- /.container-fluid -->
