--- a/WebInterface/apply/posting.html
+++ b/WebInterface/apply/posting.html
@@ -50,8 +50,10 @@
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav">
-                    <li class="active"><a href="../apply/landing.html">Apply for a Job</a></li>
-                    <li><a href="../post/landing.html">Post a Job</a></li>
+                    <li class = "active"><a href="../apply/landing.html">Apply for a Job</a></li>
+                    <li><a href="../resume/landing.html">Add a Resume</a></li>
+                    <li><a href="../AddAJob.html">Post a Job</a></li>
+                    <li><a href="../ViewApplicants/ViewApplicants.html">View Applicants</a></li>
                 </ul>
             </div><!-- /.navbar-collapse -->
         </div><!-- /.container-fluid -->
