Changed text on the resume page

--- a/WebInterface/resume/landing.html
+++ b/WebInterface/resume/landing.html
@@ -111,7 +111,7 @@
             <textarea class="form-control" rows = "3" id="education"></textarea>
         </div>
         <div class="form-group">
-            <label for="Experience">Education</label>
+            <label for="Experience">Employment</label>
             <textarea class="form-control" rows = "3" id="Experience"></textarea>
         </div>
         <button type="submit" class="btn btn-default">Submit</button>
