Added some stuff to make it better

--- a/WebInterface/index.html
+++ b/WebInterface/index.html
@@ -1,60 +1,130 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <title>AnonyJob - Hire Smarter to Work Better</title>
-    <link rel = "stylesheet" href="css/bootstrap.css">
-    <link rel = "stylesheet" href="css/bootstrap-theme.css">
-    <link rel="icon" type="image/jpg"
-          href="images/favicon.jpg" />
-    <script href="js/bootstrap.js" type="application/javascript"></script>
+
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description" content="">
+    <meta name="author" content="">
+
+    <title>Creative - Start Bootstrap Theme</title>
+
+    <!-- Bootstrap Core CSS -->
+    <link rel="stylesheet" href="css/bootstrap.min.css" type="text/css">
+
+    <!-- Custom Fonts -->
+    <link href='http://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800' rel='stylesheet' type='text/css'>
+    <link href='http://fonts.googleapis.com/css?family=Merriweather:400,300,300italic,400italic,700,700italic,900,900italic' rel='stylesheet' type='text/css'>
+    <link rel="stylesheet" href="font-awesome/css/font-awesome.min.css" type="text/css">
+
+    <!-- Plugin CSS -->
+    <link rel="stylesheet" href="css/animate.min.css" type="text/css">
+
+    <!-- Custom CSS -->
+    <link rel="stylesheet" href="css/creative.css" type="text/css">
+
+    <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
+    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
+    <!--[if lt IE 9]>
+        <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
+        <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
+    <![endif]-->
+
 </head>
-<body>
-<header class = "header">
-<nav class="navbar navbar-default">
-    <div class="container-fluid">
-        <!-- Brand and toggle get grouped for better mobile display -->
-        <div class="navbar-header">
-            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
-                <span class="sr-only">Toggle navigation</span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-            </button>
-            <a class="navbar-brand" href="index.html">AnonyJob</a>
-        </div>
 
-        <!-- Collect the nav links, forms, and other content for toggling -->
-        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-            <ul class="nav navbar-nav">
-                <li><a href="apply/landing.html">Apply for a Job</a></li>
-                <li><a href="resume/landing.html">Add A Resume</a></li>
-                <li><a href="AddAJob.html">Post a Job</a></li>
-                <li><a href="ViewApplicants/ViewApplicants.html">View Applicants</a></li>
-            </ul>
-        </div><!-- /.navbar-collapse -->
-    </div><!-- /.container-fluid -->
-</nav>
-</header>
-    <div class="wrapper">
-    <div class = "container" id="main">
-        <h1 class="text-center">Hire Smarter | Work Better</h1>
-    </div>
-    <div class="push"></div>
-    </div>
-    <footer class="footer bg-info">
-        <div class="container text-muted text-center">
-            <ul class="list-inline text-muted">
-                <li><a href="https://github.com/csteegz/HiringBias">GitHub</a></li>
-                <li><a href="http://cmsc434-s16.wikispaces.com/TA05+Interactive+Prototype+v1">Asignment Link</a></li>
-                <li><a href="about/index.html">About</a></li>
-            </ul>
-            <p>
-                TA-06 By Colin Versteeg, Sam Price, Jesse Averbukh and TJ Pickeral
-            </p>
-        </div>
-    </footer>
+<body id="page-top">
 
+    <nav id="mainNav" class="navbar navbar-default navbar-fixed-top">
+        <div class="container-fluid">
+            <!-- Brand and toggle get grouped for better mobile display -->
+            <div class="navbar-header">
+                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+                    <span class="sr-only">Toggle navigation</span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button>
+                <a class="navbar-brand page-scroll" href="#page-top">AnonyJob</a>
+            </div>
+
+            <!-- Collect the nav links, forms, and other content for toggling -->
+            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+                <ul class="nav navbar-nav navbar-right">
+                    <li>
+                        <a class="page-scroll" href="#about">About</a>
+                    </li>
+                    <li>
+                        <a class="page-scroll" href="#services">Services</a>
+                    </li>
+                    <li>
+                        <a class="page-scroll" href="#portfolio">Portfolio</a>
+                    </li>
+                    <li>
+                        <a class="page-scroll" href="#contact">Contact</a>
+                    </li>
+                </ul>
+            </div>
+            <!-- /.navbar-collapse -->
+        </div>
+        <!-- /.container-fluid -->
+    </nav>
+
+    <header>
+        <div class="header-content" style="background-color:rgba(120,120,120,.6);padding-top: 10px;padding-bottom:25px;">
+            <div class="header-content-inner">
+                <h1>AnonyJob</h1>
+				<h2>Hire Smarter | Work Better</h2>
+                <hr>
+                <p>AnonyJob is focused on allowing the best employees to get the best jobs. We Believe that when you hire the best person for the job, employees and employers both benefit. </p>
+                <a href="#employer" class="btn btn-primary btn-xl page-scroll">Employers</a>
+				<a href="#seeker" class="btn btn-primary btn-xl page-scroll">Job Seekers</a>
+            </div>
+        </div>
+    </header>
+
+    <section class="bg-primary" id="seeker">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-8 col-lg-offset-2 text-center">
+                    <h2 class="section-heading">Job Seekers</h2>
+                    <hr class="light">
+                    <p class="text-faded">Get Judged based purely on your qualifications - Find a job, no matter who you are. Employers are looking for the most qualified employees, and your qualifications can help you stand out.</p>
+                    <a href="apply/landing.html" class="btn btn-default btn-xl">Find a Job!</a>
+                </div>
+            </div>
+        </div>
+	</section>
+	
+		<section class="bg-primary" id="employer">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-8 col-lg-offset-2 text-center">
+                    <h2 class="section-heading">Find the Most Qualified Employees</h2>
+                    <hr class="light">
+                    <p class="text-faded">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</p>
+                    <a href="AddAJob.html" class="btn btn-default btn-xl">Get Started!</a>
+                </div>
+            </div>
+        </div>
+    </section>
+
+
+    <!-- jQuery -->
+    <script src="js/jquery.js"></script>
+
+    <!-- Bootstrap Core JavaScript -->
+    <script src="js/bootstrap.min.js"></script>
+
+    <!-- Plugin JavaScript -->
+    <script src="js/jquery.easing.min.js"></script>
+    <script src="js/jquery.fittext.js"></script>
+    <script src="js/wow.min.js"></script>
+
+    <!-- Custom Theme JavaScript -->
+    <script src="js/creative.js"></script>
 
 </body>
+
 </html>
