--- a/WebInterface/apply/landing.html
+++ b/WebInterface/apply/landing.html
@@ -4,8 +4,16 @@
     <meta charset="UTF-8">
     <title>Apply for a Job</title>
     <link rel = "stylesheet" href="../css/bootstrap.css">
-    <link rel = "stylesheet" href="../css/bootstrap-theme.css">
     <link rel = "stylesheet" href="../js/jquery-ui.css">
+	 <!-- Custom Fonts -->
+    <link href='http://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800' rel='stylesheet' type='text/css'>
+    <link href='http://fonts.googleapis.com/css?family=Merriweather:400,300,300italic,400italic,700,700italic,900,900italic' rel='stylesheet' type='text/css'>
+    <link rel="stylesheet" href="font-awesome/css/font-awesome.min.css" type="text/css">
+
+    <!-- Plugin CSS -->
+    <link rel="stylesheet" href="../css/animate.min.css" type="text/css">
+
+	
     <link href="../css/bootstrap-tag-cloud.css" rel="stylesheet">
     <script src="../js/jquery-1.12.3.js"></script>
     <script src="../js/bootstrap.js" type="application/javascript"></script>
@@ -105,18 +113,7 @@
 </div>
 <div class="push"></div>
 </div>
-<footer class="footer bg-info">
-    <div class="container text-muted text-center">
-        <ul class="list-inline text-muted">
-            <li><a href="https://github.com/csteegz/HiringBias">GitHub</a></li>
-            <li><a href="http://cmsc434-s16.wikispaces.com/TA05+Interactive+Prototype+v1">Asignment Link</a></li>
-            <li><a href="../about/index.html">About</a></li>
-        </ul>
-        <p>
-            TA-05 By Colin Versteeg, Sam Price, Jesse Averbukh and TJ Pickeral
-        </p>
-    </div>
-</footer>
+
 <div class="modal fade" id="applyModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
     <div class="modal-dialog" role="document">
         <div class="modal-content">
@@ -140,6 +137,7 @@
                                 </option>
                             </select>
                         </div>
+						<div class = "col-sm-2"><a href = "../resume/landing.html"><span class="glyphicon glyphicon-plus"/></a></div>
                     </div>
                     <div class="form-group">
                         <label for="CLSelect" class="col-sm-2 control-label">Cover Letter</label>
