Added better resume and cover letter dialogue

--- a/WebInterface/ViewApplicants/ViewApplicants.html
+++ b/WebInterface/ViewApplicants/ViewApplicants.html
@@ -9,10 +9,10 @@
     <script href="../js/bootstrap.min.js" type="application/javascript"></script>
     <script>
 	function handleResume(){
-		alert("Applicant resume:\n\nWorked a little here and a little there \t\t2012-2016");	
+		alert("Applicant resume:\n\nEducation:\n\nUMD \t\t\t\t\t\t2012-2016\n\nEmployment:\n\nResident Assistant, UMD \t\t2013-2016\nIntern at the Daily Show \t\t\t2012-2013");	
 	}
 	function handleCoverLetter(){
-		alert("Applicant cover letter:\n\nTo whom it may concern,\n \tI am awesome. So cool. So great. \nThank you. ");		
+		alert("Applicant cover letter:\n\nTo whom it may concern,\n \tI am awesome. I've done a lot of awesome stuff. For real. The coolest stuff. If you want to know more, email me at email@gmail.com or call me at 1-800-123-4567. \nThank you. ");		
 	}
 	</script>
 </head>
